fix: show breadcrumb on mobile

--- a/src/static/css/mobile.scss
+++ b/src/static/css/mobile.scss
@@ -10,10 +10,7 @@ $breakpoint-tablet: 820px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 0.4em;
   }
-
-  .breadcrumb {
-    display: none;
-  }
+  
   .close-sidebar,
   .open-sidebar {
     display: flex !important;
